--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <link rel="stylesheet" type="text/css" href="css/title.css">
         <link rel="stylesheet" type="text/css" href="css/bar_nav.css">
         <link rel="stylesheet" type="text/css" href="css/search.css">
-
     </head>
     
     <body class="home_view">
@@ -49,7 +48,7 @@
             <!--BUSCADOR -->
             <div id="search">
                 <form method="get" action="http://www.google.com/search">
-                    <input type="text" name="q"/>
+                    <input type="text" name="q" placeholder="Busca en google..." />
                     <input type="submit" value="Buscar" />
                 </form>
             </div>
