--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
             Alquiler, Apartamentos, Vacaciones, Casas, Habitaciones
         ">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />-->
 
         <meta charset="utf-8" />
 
@@ -31,35 +31,51 @@
 				</ul>
 			</nav>
 
-			<div id="title">
-				BED AND BREAKFAST
-			</div>
-			
-			<div id="subtitle">
-				Disfruta como si estés en tu propia casa, vayas donde vayas!
-			</div>
-
-			<div id="search">
-				<form method="get" action="http://www.google.com/search">
-                	<input type="text" name="q" placeholder="Busca en google..." />
-                	<input type="submit" value="Buscar" />
-            	</form>
+			<div class="row">
+				<div class="col-12">
+					<div id="title">
+						BED AND BREAKFAST
+					</div>
+				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-3">
-				</div>
-
-				<div class="col-3">
-				</div>
-
-				<div class="col-3">
+				<div class="col-12">
+					<div id="subtitle">
+						Disfruta como si estés en tu propia casa, vayas donde vayas!
+					</div>
 				</div>
 			</div>
 
-			<footer class="page-row">
-				<p>© Universidad de Barcelona.</p>
-			</footer>
+			<div class="row">
+	            	<div class="col-12">
+	            		<div id="search">
+							<form method="get" action="http://www.google.com/search">
+			                	<input type="text" name="q" placeholder="Busca en google..." />
+			                	<input type="submit" value="Buscar" /> 
+			            	</form>
+		            	</div>
+	            	</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12">
+            		<div class="box">
+            			<div class="col-4">
+						</div>
+
+						<div class="col-4">
+						</div>
+
+						<div class="col-4">
+						</div>
+        			</div>
+            	</div>
+			</div>
+		</div>
+
+		<div class="footer">
+			<p>© Universidad de Barcelona.</p>	
 		</div>
 	</body>
 </html>
