--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
             Alquiler, Apartamentos, Vacaciones, Casas, Habitaciones
         ">
 
-        <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
         <meta charset="utf-8" />
 
@@ -62,12 +62,15 @@
 				<div class="col-12">
             		<div class="box">
             			<div class="col-4">
+            				<img class="img-responsive" src="images/room1.jpg">
 						</div>
 
 						<div class="col-4">
+							<img class="img-responsive" src="images/room2.jpg">
 						</div>
 
 						<div class="col-4">
+							<img class="img-responsive" src="images/room3.jpg">
 						</div>
         			</div>
             	</div>
