to eng y borrado index 2

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Regístrate</a></li>
-					<li><a href="#">Inicia sesión</a></li>
-					<li><a href="#">Ayuda</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Register</a></li>
+					<li><a href="#">Log in</a></li>
+					<li><a href="#">Help</a></li>
 				</ul>
 			</nav>
 
@@ -42,7 +42,7 @@
 			<div class="row">
 				<div class="col-12">
 					<div id="subtitle">
-						Disfruta como si estés en tu propia casa, vayas donde vayas!
+						Enjoy like if you were in your own house, wherever you are!
 					</div>
 				</div>
 			</div>
@@ -51,7 +51,7 @@
 	            	<div class="col-12">
 	            		<div id="search">
 							<form method="get" action="http://www.google.com/search">
-			                	<input type="text" name="q" placeholder="Busca en google..." />
+			                	<input type="text" name="q" placeholder="Search it in Google..." />
 			                	<input type="submit" value="Buscar" /> 
 			            	</form>
 		            	</div>
@@ -78,7 +78,7 @@
 		</div>
 
 		<div class="footer">
-			<p>© Universidad de Barcelona.</p>	
+			<p>© University of Barcelona.</p>	
 		</div>
 	</body>
 </html>
