html register, login y help anyadidos

--- a/login.html
+++ b/login.html
@@ -48,32 +48,15 @@
 			</div>
 
 			<div class="row">
-	            	<div class="col-12">
-	            		<div id="search">
-							<form method="get" action="http://www.google.com/search">
-			                	<input type="text" name="q" placeholder="Search it in Google..." />
-			                	<input type="submit" value="Buscar" /> 
-			            	</form>
-		            	</div>
-	            	</div>
-			</div>
-
-			<div class="row">
 				<div class="col-12">
-            		<div class="box">
-            			<div class="col-4">
-            				<img class="img-responsive" src="images/room1.jpg">
-						</div>
-
-						<div class="col-4">
-							<img class="img-responsive" src="images/room2.jpg">
-						</div>
-
-						<div class="col-4">
-							<img class="img-responsive" src="images/room3.jpg">
-						</div>
-        			</div>
-            	</div>
+					<div class="login">
+						<form>
+							<input class="login-input" type="email" placeholder="Email">
+							<input class="login-input" type="password" placeholder="Password">
+							<input type="submit" value="Log in">
+						</form>
+					</div>
+				</div>
 			</div>
 		</div>
 
