--- a/register.html
+++ b/register.html
@@ -48,32 +48,21 @@
 			</div>
 
 			<div class="row">
-	            	<div class="col-12">
-	            		<div id="search">
-							<form method="get" action="http://www.google.com/search">
-			                	<input type="text" name="q" placeholder="Search it in Google..." />
-			                	<input type="submit" value="Buscar" /> 
-			            	</form>
-		            	</div>
-	            	</div>
-			</div>
-
-			<div class="row">
 				<div class="col-12">
-            		<div class="box">
-            			<div class="col-4">
-            				<img class="img-responsive" src="images/room1.jpg">
-						</div>
+					<div class="register">
+						<input type="radio" name="sex" value="F" id="sex_f" checked>
+						<label for="sex_f">Female</label>
 
-						<div class="col-4">
-							<img class="img-responsive" src="images/room2.jpg">
-						</div>
+						<input type="radio" name="sex" value="M" id="sex_m">
+						<label for="sex_m">Male</label>
 
-						<div class="col-4">
-							<img class="img-responsive" src="images/room3.jpg">
-						</div>
-        			</div>
-            	</div>
+						<form>
+							<input type="email" class="register-input" placeholder="Email">
+							<input type="password" class="register-input" placeholder="Password">
+							<input type="submit" value="Create Account">
+						</form>
+					</div>
+				</div>
 			</div>
 		</div>
 
