--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <meta charset="utf-8" />
 
-        <link rel="stylesheet" type="text/css" href="css/index1.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 
 	<body>
