punto de entrega2, aunque aun queda pulir el mostrar datos leidos de la base de datos

--- a/login.html
+++ b/login.html
@@ -50,10 +50,10 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="login">
-						<form id='login' action='check_login.php' method='post'>
-							<input class="login-input" id="myemail" type="email" placeholder="Email">
-							<input class="login-input" id="mypassword" type="password" placeholder="Password">
-							<input type="submit" value="Log in">
+						<form action="CheckLogin.php" method="post">
+							<input class="login-input" name="myemail" type="email" placeholder="Email">
+							<input class="login-input" name="mypassword" type="password" placeholder="Password">
+							<input name="submit" type="submit" value="Log in">
 						</form>
 					</div>
 				</div>
