--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="register.html">Register</a></li>
-					<li><a href="login.html">Log in</a></li>
+					<li><a href="login.php">Log in</a></li>
 					<li><a href="help.html">Help</a></li>
 				</ul>
 			</nav>
